--- a/public/index-building-blocks.html
+++ b/public/index-building-blocks.html
@@ -2,20 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Building Cities</title>
+		<title>Building Blocks</title>
 	</head>
 	<body>
-		<h1>Cities</h1>
+		<h1>Blocks</h1>
 		<form>
-			<legend>New City</legend>
+			<legend>New Block</legend>
 			<input name="name" type="text" placeholder="Name">
 			<input name="description" type="text" placeholder="Description">
 			<input type="submit">
 		</form>
 
-		<ul class="cities-list"></ul>
+		<ul class="block-list"></ul>
 
 		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/client-cities.js"></script>
+		<script src="assets/js/client.js"></script>
 	</body>
 </html>
